--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -2,21 +2,22 @@
     "compilerOptions": {
         "target": "es5",                          /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', 'ES2018', 'ES2019' or 'ESNEXT'. */
         "module": "es2015",                     /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */
-        "jsx": "preserve",                     /* Specify JSX code generation: 'preserve', 'react-native', or 'react'. */
+        "jsx": "react",                     /* Specify JSX code generation: 'preserve', 'react-native', or 'react'. */
         "sourceMap": true,                     /* Generates corresponding '.map' file. */
         "strict": true,                           /* Enable all strict type-checking options. */
         "allowSyntheticDefaultImports": true,  /* Allow default imports from modules with no default export. This does not affect code emit, just typechecking. */
         "esModuleInterop": true,                   /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */
-        "baseUrl": "./src",
+        "moduleResolution": "node",
+        // "no-implicit-dependencies": false,
+        "baseUrl": ".",
         "paths": {
             "@common/*": [
-                "commin/*"
+                "src/common/*"
             ],
             "@components/*": [
-                "components/*"
+                "src/components/*"
             ]
-        },
-        "moduleResolution": "node"
+        }
     },
     "exclude": [
         "dist",
